// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts component renders blank slate if not posts 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="smile icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      No hay posts!
    </div>
    <p>
      Prueba recargando la página para intentar descargar los últimos posts.
    </p>
  </div>
</div>
`;

exports[`Posts component renders error message when fetching posts fails 1`] = `
<div
  className="ui icon negative message"
>
  <i
    aria-hidden="true"
    className="frown icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Houston, tenemos un problema!
    </div>
    <p>
      Intenta recargar la página. Error: network error
    </p>
  </div>
</div>
`;

exports[`Posts component renders loader when fetching posts 1`] = `
<div
  className="ui active centered inline loader"
/>
`;

exports[`Posts component renders posts 1`] = `
<div
  className="ui four cards"
>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <img
      className="ui image"
      src=""
    />
    <div
      className="content"
    >
      <a
        className="header"
        href="canonical-url-1"
        target="_blank"
      >
        post-title-1
      </a>
      <div
        className="meta"
      >
        <time
          dateTime="2017-12-22T05:28:22.005Z"
          title="2017-12-22 05:28"
        >
          hace 21 horas
        </time>
      </div>
    </div>
    <div
      className="extra content"
    >
      <img
        className="ui avatar image"
        src="medium-avatar-1"
      />
      owner-nick-1
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <img
      className="ui image"
      src=""
    />
    <div
      className="content"
    >
      <a
        className="header"
        href="canonical-url-2"
        target="_blank"
      >
        post-title-2
      </a>
      <div
        className="meta"
      >
        <time
          dateTime="2017-12-22T05:28:32.005Z"
          title="2017-12-22 05:28"
        >
          hace 21 horas
        </time>
      </div>
    </div>
    <div
      className="extra content"
    >
      <img
        className="ui avatar image"
        src="medium-avatar-2"
      />
      owner-nick-2
    </div>
  </div>
</div>
`;
